Archive2/cd/56b988a05eca51/output
main.cpp:5:218: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
struct ChildA : public Parent {};//                                                                                                                                                                                      \  
                                                                                                                                                                                                                         ^
main.cpp:5:220: warning: multi-line // comment [-Wcomment]
struct ChildA : public Parent {};//                                                                                                                                                                                      \  
                                                                                                                                                                                                                           ^
main.cpp:6:219: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
struct ChildB : public Parent {};//                                                                                                                                                                                       \   
                                                                                                                                                                                                                          ^
main.cpp:7:220: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
//                                                                                                                                                                                                                         \   
                                                                                                                                                                                                                           ^
main.cpp:7:223: warning: multi-line // comment [-Wcomment]
//                                                                                                                                                                                                                         \   
                                                                                                                                                                                                                              ^
main.cpp:8:221: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
int main() {        //                                                                                                                                                                                                      \   
                                                                                                                                                                                                                            ^
main.cpp:8:224: warning: multi-line // comment [-Wcomment]
int main() {        //                                                                                                                                                                                                      \   
                                                                                                                                                                                                                               ^
main.cpp:9:222: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
    ChildA a_foo;//                                                                                                                                                                                                          \   
                                                                                                                                                                                                                             ^
main.cpp:9:225: warning: multi-line // comment [-Wcomment]
    ChildA a_foo;//                                                                                                                                                                                                          \   
                                                                                                                                                                                                                                ^
main.cpp:10:223: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
    ChildB b_foo;//                                                                                                                                                                                                           \   
                                                                                                                                                                                                                              ^
main.cpp:11:224: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
//                                                                                                                                                                                                                             \   
                                                                                                                                                                                                                               ^
main.cpp:11:227: warning: multi-line // comment [-Wcomment]
//                                                                                                                                                                                                                             \   
                                                                                                                                                                                                                                  ^
main.cpp:12:225: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
    Parent implicit_a; //                                                                                                                                                                                                       \   
                                                                                                                                                                                                                                ^
main.cpp:12:228: warning: multi-line // comment [-Wcomment]
    Parent implicit_a; //                                                                                                                                                                                                       \   
                                                                                                                                                                                                                                   ^
main.cpp:13:226: warning: backslash and newline separated by space [-Wbackslash-newline-escape]
    implicit_a = a_foo; // * These are implicit conversions are they not?                                                                                                                                                        \   
                                                                                                                                                                                                                                 ^
main.cpp:13:229: warning: multi-line // comment [-Wcomment]
    implicit_a = a_foo; // * These are implicit conversions are they not?                                                                                                                                                        \   
                                                                                                                                                                                                                                    ^
main.cpp:15:5: error: C++ requires a type specifier for all declarations
    implicit_b = b_foo; // *                                                                                                                                                                                                      |
    ^~~~~~~~~~
main.cpp:15:18: error: use of undeclared identifier 'b_foo'
    implicit_b = b_foo; // *                                                                                                                                                                                                      |
                 ^
main.cpp:17:30: error: unknown type name 'ChildB'; did you mean 'ChildA'?
    std::common_type<ChildA, ChildB>::type::bar foo = 100; // so std::common_type<ChildA, ChildB>::type should be Parent because both ChildA and ChildB can be implicitly converted to Parent. So Parent::bar is int according to |
                             ^~~~~~
                             ChildA
main.cpp:5:8: note: 'ChildA' declared here
struct ChildA : public Parent {};//                                                                                                                                                                                      \  
       ^
main.cpp:19:1: error: extraneous closing brace ('}')
}
^
16 warnings and 4 errors generated.
